Fixes for EuiHeader z-index, EuiPopover buffer, and EuiCollapsibleNav close button props (#3398)
* Add body classes when flyouts and nav are open

* [EuiCollapsibleNav] Extend the props of the close button

* [EuiPopover] Add `buffer` prop to adjust distance between popover and container

* [EuiFlyout] i18n `closeButtonArialLabel` default

--- a/src/components/collapsible_nav/_collapsible_nav.scss
+++ b/src/components/collapsible_nav/_collapsible_nav.scss
@@ -21,6 +21,7 @@
 // via the `dockingBreakpoint` and `isDocked` combination
 .euiCollapsibleNav.euiCollapsibleNav--isDocked {
   @include euiBottomShadowMedium;
+  z-index: $euiZHeader; // When docked, make it the same level as the header
 
   .euiCollapsibleNav__closeButton {
     display: none;
